--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -155,6 +155,27 @@ body {
 }
 /* end of question styles */
 
+/* start of results styles */
+.results-section {
+  display: flex;
+  flex-direction: column;
+}
+.results-table {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: black;
+}
+.results-item {
+  padding: 1rem 0;
+  margin: 0;
+  font-size: 1rem;
+  text-transform: uppercase;
+  align-items: center;
+  list-style: none;
+  transition: color 0.6s ease-in-out, background-color 0.6s ease-in-out;
+}
+
 /*start of footer styles */
 .footer {
   background-color: var(--very-dark-green);
