--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -79,7 +79,8 @@ body {
 }
 
 .content-section-title {
-  font-size: 4rem;
+  font-size: 3rem;
+  text-transform: uppercase;
 }
 .content-section-info {
   font-size: 2rem;
@@ -174,7 +175,29 @@ body {
   transition: color 0.6s ease-in-out, background-color 0.6s ease-in-out;
   color: var(--beige);
 }
-
+/* end of results styles */
+/* start of form styles */
+.feedback-section {
+  height: fit-content;
+}
+.form-control {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+.form-input {
+  padding: 1rem 2rem;
+  width: 100%;
+  border: none;
+  border-radius: 5%;
+}
+.form-input::placeholder {
+  font-size: 1.6rem;
+  letter-spacing: 0.4rem;
+  text-align: center;
+}
+/* end of form styles */
 /*start of footer styles */
 .footer {
   background-color: var(--very-dark-green);
