--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -239,11 +239,11 @@ body {
 }
 .footer-icon a {
   text-decoration: none;
-  color: var(--text);
+  color: var(--beige);
 }
 .footer-icon:hover a {
   cursor: pointer;
-  color: var(--red);
+  color: var(--dark-green);
 }
 .footer-icon i {
   font-size: 2rem;
@@ -255,19 +255,6 @@ body {
 
   justify-content: center;
   margin: 1rem 0;
-}
-.contact-link {
-  text-decoration: none;
-  color: var(--beige);
-  box-shadow: inset 0 0 0 0 #54b3d6;
-  margin: 0 -0.25rem;
-  padding: 0 0.25rem;
-  transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-  margin: 0.5rem 0;
-}
-.contact-link:hover {
-  box-shadow: inset 100px 0 0 0 #54b3d6;
-  color: white;
 }
 
 /*end of footer styles */
